Version CVS HEAD (?)

  * packaging changes:
    - updated autotools build files to compile on OS X
      (conditional compilation of CoreMIDI and MidiShare drivers)
    - hand-crafted assembly optimization code can be disabled with
      './configure --disable-asm' (definitely not recommended)
  * support for the gig parameters for "release velocity response"
    curves
  * fine tuning of the EGADSR envelope
  * LSCP server:
    - fixed some crashs (patch by Grigor Iliev, fixes #19)

Version 0.3.1 (24 May 2005)

  * initial release